RESOLVED FIXED192804
Some iOS app crash in FrameLoader::checkCompleted
https://bugs.webkit.org/show_bug.cgi?id=192804
Summary Some iOS app crash in FrameLoader::checkCompleted
Ryosuke Niwa
Reported 2018-12-17 22:14:02 PST
Some iOS app crash in FrameLoader::checkCompleted
Attachments
Fix attempt (3.99 KB, patch)
2018-12-17 22:17 PST, Ryosuke Niwa
no flags
Fixed builds and incorporated Tim's comment (4.04 KB, patch)
2018-12-18 12:02 PST, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2018-12-17 22:17:12 PST
Created attachment 357536 [details] Fix attempt
Tim Horton
Comment 2 2018-12-17 23:28:19 PST
Comment on attachment 357536 [details] Fix attempt View in context: https://bugs.webkit.org/attachment.cgi?id=357536&action=review > Source/WebCore/dom/ScriptDisallowedScope.h:90 > +#if TARGET_OS_IPHONE Why not PLATFORM(IOS_FAMILY)?
Ryosuke Niwa
Comment 3 2018-12-18 11:48:48 PST
(In reply to Tim Horton from comment #2) > Comment on attachment 357536 [details] > Fix attempt > > View in context: > https://bugs.webkit.org/attachment.cgi?id=357536&action=review > > > Source/WebCore/dom/ScriptDisallowedScope.h:90 > > +#if TARGET_OS_IPHONE > > Why not PLATFORM(IOS_FAMILY)? Good point. Will fix.
Ryosuke Niwa
Comment 4 2018-12-18 12:02:25 PST
Created attachment 357594 [details] Fixed builds and incorporated Tim's comment
Ryosuke Niwa
Comment 5 2018-12-18 14:03:09 PST
Comment on attachment 357594 [details] Fixed builds and incorporated Tim's comment Clearing flags on attachment: 357594 Committed r239353: <https://trac.webkit.org/changeset/239353>
Ryosuke Niwa
Comment 6 2018-12-18 14:03:11 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2018-12-18 14:04:26 PST
Note You need to log in before you can comment on or make changes to this bug.